# charuco-lidar-calibration

./: .gitignore  README.md  pyproject.toml
charuco_lidar_calib/: camera.py  charuco.py  find_board.py  icp.py  lidar.py  lidar_calib.py  main.py  one_img_find_board.py  rosbag.py
writeup/: index.aux  index.fdb_latexmk  index.fls  index.out  index.tex
